Fix tool card alyout on mobile

--- a/components/tools/listPage/ToolCard/ToolCard.module.css
+++ b/components/tools/listPage/ToolCard/ToolCard.module.css
@@ -17,7 +17,11 @@
 .description {
     margin: 16px 0;
     font-size: 14px;
-    line-height: 20px;
+    overflow-wrap: anywhere;
+}
+
+.description p {
+    line-height: 22px;
 }
 
 .toolMeta {
